@@ -112,17 +112,64 @@ dependencies {
 
 tasks.withType( JavaCompile ) {
 	options.encoding = 'UTF-8'
-	sourceCompatibility = project.baselineJavaVersion
-	targetCompatibility = project.baselineJavaVersion
 }
 
-if ( project.baselineJavaVersion != gradle.ext.testedJavaVersion ) {
-	logger.info( "Forcing the target bytecode version for test classes to '$gradle.ext.testedJavaVersion'" )
+if ( !gradle.ext.javaToolchainEnabled ) {
+	tasks.compileJava.configure {
+		sourceCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.main.release )
+		targetCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.main.release )
+	}
+	tasks.compileTestJava.configure {
+		sourceCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.test.release )
+		targetCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.test.release )
+	}
+}
+else {
+	// Configure generated bytecode
+	// "sourceCompatibility" is not supported with toolchains. We have to work around that limitation.
+	tasks.compileJava.configure {
+		if ( gradle.ext.javaVersions.main.compiler.asInt() < 9 ) {
+			options.compilerArgs << '-source'
+			options.compilerArgs << gradle.ext.javaVersions.main.release.toString()
+			options.compilerArgs << '-target'
+			options.compilerArgs << gradle.ext.javaVersions.main.release.toString()
+		} else {
+			options.release = gradle.ext.javaVersions.main.release.asInt()
+		}
+	}
+	tasks.compileTestJava.configure {
+		if ( gradle.ext.javaVersions.test.compiler.asInt() < 9 ) {
+			options.compilerArgs << '-source'
+			options.compilerArgs << gradle.ext.javaVersions.test.release.toString()
+			options.compilerArgs << '-target'
+			options.compilerArgs << gradle.ext.javaVersions.test.release.toString()
+		} else {
+			options.release = gradle.ext.javaVersions.test.release.asInt()
+		}
+	}
 
+	// Configure version of Java tools
+	java {
+		toolchain {
+			languageVersion = gradle.ext.javaVersions.main.compiler
+		}
+	}
 	tasks.compileTestJava {
-		// For *tests only*, generate bytecode matching the Java version currently in use.
-		// This allows testing bytecode enhancement on the latest Java versions (13, 14, ...).
-		targetCompatibility = gradle.ext.testedJavaVersion
+		javaCompiler = javaToolchains.compilerFor {
+			languageVersion = gradle.ext.javaVersions.test.compiler
+		}
+	}
+
+	// Display version of Java tools
+	tasks.withType( JavaCompile ).configureEach {
+		doFirst {
+			logger.lifecycle "Compiling with '${javaCompiler.get().metadata.installationPath}'"
+		}
+	}
+	tasks.withType( Javadoc ).configureEach {
+		doFirst {
+			logger.lifecycle "Generating javadoc with '${javadocTool.get().metadata.installationPath}'"
+		}
 	}
 }
 
@@ -166,8 +213,21 @@ if ( ext.toolsJar.exists() ) {
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Testing
 
+if ( gradle.ext.javaToolchainEnabled ) {
+	tasks.test {
+		// Configure version of Java tools
+		javaLauncher = javaToolchains.launcherFor {
+			languageVersion = gradle.ext.javaVersions.test.launcher
+		}
+		// Display version of Java tools
+		doFirst {
+			logger.lifecycle "Testing with '${javaLauncher.get().metadata.installationPath}'"
+		}
+	}
+}
+
 tasks.withType( Test.class ).all { task ->
-	if ( JavaVersion.current().isJava9Compatible() ) {
+	if ( gradle.ext.javaVersions.test.launcher.asInt() >= 9 ) {
 		// Byteman needs this property to be set, https://developer.jboss.org/thread/274997
 		task.jvmArgs += ["-Djdk.attach.allowAttachSelf=true"]
 	}
@@ -217,12 +277,10 @@ test {
 
 // Enable the experimental features of ByteBuddy with JDK 15+
 test {
-	if ( JavaVersion.current().isJava11Compatible() ) {
-		int majorJVMVersionInt = Integer.valueOf( JavaVersion.current().toString() );
-		//Set the -Dnet.bytebuddy.experimental=true property only when we need it:
-		if ( majorJVMVersionInt >= 12 ) {
-			systemProperty 'net.bytebuddy.experimental', true
-		}
+	if ( gradle.ext.javaVersions.test.release.asInt() >= 15 ) {
+		logger.warn( "The version of Java bytecode that will be tested is not supported by Bytebuddy by default. " +
+				 " Setting 'net.bytebuddy.experimental=true'." )
+		systemProperty 'net.bytebuddy.experimental', true
 	}
 }
 
@@ -350,7 +408,7 @@ task forbiddenApisUnsafe(type: CheckForbiddenApis, dependsOn: compileJava) {
 	classesDirs = project.sourceSets.main.output.classesDirs
 	classpath = project.sourceSets.main.compileClasspath + project.sourceSets.main.runtimeClasspath
 	targetCompatibility = project.forbiddenAPITargetJDKCompatibility
-	bundledSignatures += "jdk-unsafe-${baselineJavaVersion}".toString()
+	bundledSignatures += "jdk-unsafe-${gradle.ext.baselineJavaVersion}".toString()
 
 	// unfortunately we currently have many uses of default Locale implicitly (~370) which need to be fixed
 	// before we can fully enabled this check
